--- a/www/app/cars/cars.detail.delete.html
+++ b/www/app/cars/cars.detail.delete.html
@@ -1,4 +1,4 @@
-<p><strong>Delete this server ({{server.Name}})?</strong></p>
+<p><strong>Delete this car ({{car.Model}})?</strong></p>
 <form class="form-horizontal">
 	<div class="form-group">
 		<div class="col-xs-offset-2 col-xs-10">
