--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -1,3 +1,3 @@
-<p class="lead">Welcome to Crunchy PostgreSQL Manager</p>
+<p class="lead">Crunchy PostgreSQL Container Client</p>
 <div ui-view class="slide"></div>
 
