--- a/www/app/home/home.detail.html
+++ b/www/app/home/home.detail.html
@@ -1,20 +1,21 @@
 <div class="center-block">
-    <p><strong>HealthCheck</strong></p>
+    <p><strong>Connection Information</strong></p>
     <table>
-	    <th>Project</th>
-	    <th>Container</th>
-	    <th>Status</th>
-        <tr ng-repeat="hc in hcdata">
-		<td class="col-md-2"><a ui-sref="projects.detail.edit({projectId:hc.ProjectID})">{{hc.ProjectName}}</a></td>
-		<td class="col-md-2">
-			<a ng-if="hc.ContainerImage == 'cpm-node-proxy'" ui-sref="projects.detail.gotoproxy({containerName:hc.ContainerName,projectId:hc.ProjectID,containerId:hc.ContainerID})">{{hc.ContainerName}}</a>
-			<a ng-if="hc.ContainerImage == 'cpm-node'" ui-sref="projects.detail.gotocontainer({projectId:hc.ProjectID,containerId:hc.ContainerID})">{{hc.ContainerName}}</a>
-		</td>
-            <td  class="col-md-2"header-class="text-left" data-title="'Status'" width="200">
-                <a tooltip="{{hc.Status}}" style="color:red" ng-if="hc.Status == 'down'" href=""><i class="fa fa-warning"></i></a>
-                <a tooltip="{{hc.Status}}" style="color:green" ng-if="hc.Status == 'up'" href=""><i class="fa fa-check"></i></a>
-            </td>
-
+	    <tr>
+		    <td class="col-md-2">PG_USER</td>
+		<td class="col-md-2">{{conn.PG_USER}}</td>
+        </tr>
+	    <tr>
+		    <td class="col-md-2">PG_PASSWORD</td>
+		<td class="col-md-2">{{conn.PG_PASSWORD}}</td>
+        </tr>
+	    <tr>
+		    <td class="col-md-2">PG_DATABASE</td>
+		<td class="col-md-2">{{conn.PG_DATABASE}}</td>
+        </tr>
+	    <tr>
+		    <td class="col-md-2">PG_HOST</td>
+		<td class="col-md-2">{{conn.PG_HOST}}</td>
         </tr>
     </table>
 </div>
